# TinyCode

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
api/: index.py
configs/: models.example.json
docs/: one_pager.md
scripts/: export_train_data.py  export_verification_trace.py  generate_dataset.py  generate_report.py  run_baselines.py  run_eval.py  smoke_test.py  validate_dataset.py  web_app.py
tinycodetest/: __init__.py  dataset.py  environment.py  eval_runner.py  harness.py  models.py  reporting.py  schema.py  verifier.py  verifiers_adapter.py
